Added images and video, started building css

--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
 
+    <p class=link></p>
+
+<!-- phone hero video -->
+
+    <div id=video>
+        <p></p>
+    </div>
+
+    
   </body>
 </html>
