added photo and h2

--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
 
-<!-- Content starts-->
+  <!-- Content starts-->
 
   <body>
     <h1>Discover hidden places in the world around you</h1>
 
-    <p class=link></p>
+    <p class="link">Download Excusrion (coming soon!)</p>
 
-<!-- phone hero video -->
+    <!-- phone hero video -->
 
-    <div id=video>
-        <p></p>
+    <div class="phone">
+        <p class="video"></p>
     </div>
 
-    
+    <!-- phone end -->
+
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="./resources/images/camp.jpg" /></p>
+
   </body>
 </html>
