--- a/index.html
+++ b/index.html
@@ -15,15 +15,28 @@
 
     <!-- phone hero video -->
 
-    <div class="phone">
-        <p class="video"></p>
+    <div>
+        <video height="720px" width="404px">
+        <source src=".resources/videos/excursion.mp4" type="video/mp4">
+        </video>
     </div>
 
     <!-- phone end -->
 
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="./resources/images/camp.jpg" /></p>
+
+    <p><img src="./resources/images/camp.jpg" alt="A tent at night" /></p>
+    <p><img src=".resources/images/phone.png" alt="Phone icon" /></p>
+
+    <h2>Coming soon for iPhone and Android</h2>
+
+    <p class="link">Download Excusrion (coming soon!)</p>
+
+    <!-- footer -->
+
+    <p class="footer">&copy; Excursion</p>
+
 
   </body>
 </html>
