--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
     <!-- phone hero video -->
 
-    <div>
-        <video height="720px" width="404px">
-        <source src=".resources/videos/excursion.mp4" type="video/mp4">
-        </video>
+    <div class="phone">
+        <p>
+          <video width="404" height="720" controls autoplay>
+          <source src="./resources/videos/excursion.mp4" type="video/mp4">
+          </video>
+        </p>
     </div>
 
     <!-- phone end -->
@@ -27,7 +29,7 @@
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 
     <p><img src="./resources/images/camp.jpg" alt="A tent at night" /></p>
-    <p><img src=".resources/images/phone.png" alt="Phone icon" /></p>
+    <p><img src="./resources/images/phone.png" alt="Phone icon" /></p>
 
     <h2>Coming soon for iPhone and Android</h2>
 
